syntax = "proto3";
option go_package = "github.com/twirapp/twir/libs/grpc/dota";
package dota;

service Dota {
  rpc GetPlayerCard(GetPlayerCardRequest) returns (GetPlayerCardResponse) {}
}

message GetPlayerCardRequest {
  int64 accountId = 1;
}

message GetPlayerCardResponse {
  string account_id = 1;
  optional int64 rank_tier = 2;
  optional int64 leaderboard_rank = 3;
}
